--- a/bert/colab/bert.ipynb
+++ b/bert/colab/bert.ipynb
@@ -1,30 +1,23 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "bert.ipynb",
-      "provenance": [],
-      "authorship_tag": "ABX9TyNPDlCblKyp8iOK9cNXXdMa",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/aNo2mousNo2/pytorch_expamples/blob/master/bert/colab/bert.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!pip install transformers\n",
+        "!pip install pytorch_lightning"
       ]
     },
     {
@@ -47,11 +40,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(pl.__version__)\n",
-        "print(torch.__version__)\n",
-        "print(torchtext.__version__)"
-      ],
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -59,29 +48,55 @@
         "id": "oY9e4Fi2VWV0",
         "outputId": "85cbc88a-7b92-414c-eacf-835883705eea"
       },
-      "execution_count": 12,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "1.6.4\n",
             "1.11.0+cu113\n",
             "0.12.0\n"
           ]
         }
+      ],
+      "source": [
+        "print(pl.__version__)\n",
+        "print(torch.__version__)\n",
+        "print(torchtext.__version__)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "iAb8HF8ZVzbr"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyNPDlCblKyp8iOK9cNXXdMa",
+      "include_colab_link": true,
+      "name": "bert.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3.9.12 ('base')",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.9.12"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "737fb9c1fef38a8cd62a84c29c68ad4c1bf1cce4b79adb3f7d77b3367438e4ca"
+      }
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
